--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 <title>Dokument bez tytułu</title>
 <script src="scripts/zoom.js"></script>
 <script src="scripts/db.js"></script>
-<script src="scripts/photo.js"></script>
+<script src="scripts/thumb.js"></script>
+<script src="scripts/thumblist.js"></script>
 <script src="scripts/main.js"></script>
 </head>
 
 <body>
+    <div id="app"></div>
 </body>
 </html>
