--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Dokument bez tytułu</title>
+<script src="node_modules/super-event-emitter/dist/super-event-emitter.js"></script>
 <script src="scripts/zoom.js"></script>
 <script src="scripts/db.js"></script>
 <script src="scripts/thumb.js"></script>
