--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
+<script src="https://unpkg.com/super-event-emitter@4.1.6/dist/super-event-emitter.min.js"></script>
 
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Dokument bez tytułu</title>
-<script src="node_modules/super-event-emitter/dist/super-event-emitter.js"></script>
-<script src="scripts/zoom.js"></script>
-<script src="scripts/db.js"></script>
-<script src="scripts/thumb.js"></script>
-<script src="scripts/thumblist.js"></script>
+
+<script src="scripts/services/photos.service.js"></script>
+<script src="scripts/components/zoom.component.js"></script>
+<script src="scripts/components/thumb.component.js"></script>
+<script src="scripts/components/thumb-list.component.js"></script>
 <script src="scripts/main.js"></script>
-</head>
+
+<link rel="stylesheet" href="style.css">
 
 <body>
-    <div id="app"></div>
-</body>
-</html>
+   <div id="app"></div>
+</body>  
