--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<script src="https://unpkg.com/super-event-emitter@4.1.6/dist/super-event-emitter.min.js"></script>
-
-
-<script src="scripts/services/photos.service.js"></script>
-<script src="scripts/components/zoom.component.js"></script>
-<script src="scripts/components/thumb.component.js"></script>
-<script src="scripts/components/thumb-list.component.js"></script>
-<script src="scripts/main.js"></script>
+<script src="dist/bundle.js"></script>
 
 
 <body>
